[r=blake-rouse][bug=][author=ricgard] Table dropdown animations, disabled styles and alignment issues

--- a/src/maasserver/static/scss/maas/components/_placeholders.scss
+++ b/src/maasserver/static/scss/maas/components/_placeholders.scss
@@ -124,6 +124,10 @@
 .margin-top {
     margin-top: 20px;
 
+    &--five {
+      margin-top: 5px;
+    }
+    
     &--ten {
         margin-top: 10px;
     }
